Closed Bug 1629843 Opened 5 years ago Closed 5 years ago

Crash in [@ CheckZoneTracer::checkZone]

Categories

(Core :: XPCOM, defect, P1)

77 Branch
x86_64
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 --- unaffected
firefox77 --- fixed

People

(Reporter: achronop, Assigned: jonco)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

This bug is for crash report bp-638ca667-bc68-4444-b4c0-85c5b0200413.

Top 10 frames of crashing thread:

0 XUL CheckZoneTracer::checkZone const xpcom/base/CycleCollectedJSRuntime.cpp:1109
1 XUL mozilla::CycleCollectedJSRuntime::TraceNativeGrayRoots xpcom/base/CycleCollectedJSRuntime.cpp:1204
2 XUL js::gc::GCRuntime::bufferGrayRoots js/src/gc/RootMarking.cpp:555
3 XUL js::GCParallelTask::runTask js/src/gc/GCParallelTask.cpp:146
4 XUL js::GCParallelTask::runFromHelperThread js/src/gc/GCParallelTask.cpp:131
5 XUL js::HelperThread::ThreadMain js/src/vm/HelperThreads.cpp:2048
6 XUL js::detail::ThreadTrampoline<void  js/src/threading/Thread.h:206
7 libsystem_pthread.dylib _pthread_body 
8 libsystem_pthread.dylib _pthread_start 
9 libsystem_pthread.dylib thread_start 

Flags: needinfo?(jcoppeard)

The classes so far are XMLHttpRequestMainThread and CustomEvent. I think smaug brought up CustomEvent as a possible concern.

Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Priority: -- → P1
Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9245d0f3e37c Mark XMLHttpRequestMainThread and CustomEvent classes as containing pointers to JS GC things in multiple zones r=mccr8
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77

Reopening this as there are now some crashes for IDBRequest too.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attachment #9141191 - Attachment description: Bug 1629843 - Mark IDBRequest as able to have pointers into more than one JS zone r?mccr8 → Bug 1629843 - Mark indexedDB classes as able to have pointers into more than one JS zone r?mccr8
Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/77c24a33c09e Mark indexedDB classes as able to have pointers into more than one JS zone r=mccr8
Status: REOPENED → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
Blocks: 1425450
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: