Bug 1629843 - Mark XMLHttpRequestMainThread and CustomEvent classes as containing pointers to JS GC things in multiple zones r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D70901