dom/events/CustomEvent.cpp
@@ -22,7 +22,7 @@ CustomEvent::CustomEvent(mozilla::dom::EventTarget* aOwner,
 
 CustomEvent::~CustomEvent() { mozilla::DropJSObjects(this); }
 
-NS_IMPL_CYCLE_COLLECTION_CLASS(CustomEvent)
+NS_IMPL_CYCLE_COLLECTION_MULTI_ZONE_JSHOLDER_CLASS(CustomEvent)
 NS_IMPL_CYCLE_COLLECTION_UNLINK_BEGIN_INHERITED(CustomEvent, Event)
   tmp->mDetail.setUndefined();
   mozilla::DropJSObjects(this);
